--- a/src/styles/formStyles.scss
+++ b/src/styles/formStyles.scss
@@ -16,43 +16,48 @@ main {
     width: 100%;
     height: 100vh;
     display: flex;
-    .creditCardContainer {
-        height: 100%;
-        background-image: url('../assets/images/bg-main-desktop.png');
-        background-position: 0;
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 40%;
-    }
+   
 
     .formContainer {
+        position: relative;
         display: flex;
-        height: 100%;
-        width: 60%;
-        justify-content: center;
         align-items: center;
-        input {
-
+        height: 100%;
+        width: 100%;
+        margin: auto 0;
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            height: 100%;
+            width: 50%;
+            margin: 0 5% 0 auto;
+            div:not(.group) {
+                display: flex;
+                flex-direction: column;
+            }
         }
     }
 
 
 
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1200px) {
     main {
         flex-direction: column;
-        .creditCardContainer {
-            height: 30%;
-            background-image: url('../assets/images/bg-main-desktop.png');
-            background-position: 0;
-            background-repeat: no-repeat;
-            background-size: cover;
-            width: 100%;
-        }
+        
 
         .formContainer {
             width: 100%;
+            form {
+                width: 80%;
+                margin: 0 auto;
+                div:not(.group) {
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
         }
     }
 }
+
